--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,4 +1,4 @@
-                  Building and Installing the Juggler Project
+         Building and Installing the Juggler Project (Version 1.1/2.0)
 
   The Juggler Team
 
@@ -32,6 +32,13 @@
                 Tips for Compiling Individual Tools in the Juggler Suite
 
 Introduction
+
+   You have downloaded the source code for Version 1.1 of the Juggler
+   Project. This is the code that will become VR Juggler 2.0, and it is the
+   code that is used to create the VR juggler 2.0 pre-releases. Please be
+   aware that this code represents a work in progress, and if you acquired it
+   directly from CVS rather than using a pre-packaged source code snapshot,
+   the code may have bugs affecting compilation and execution.
 
    This document explains how to build the modules of the Juggler Project
    from the source code. We begin by explaining some issues related to
@@ -147,9 +154,6 @@ Getting the Source Code and the Dependencies
 
    The current list of required software packages is as follows:
 
-     o GMTL (http://ggt.sf.net/): A generic math library that makes use of
-       C++ templates and STL paradigms.
-
      o CppDOM (http://www.sf.net/projects/xml-cppdom/): A lightweight,
        easy-to-use XML parser written in C++. CppDOM must be compiled and
        installed for use with VR Juggler.
@@ -157,6 +161,9 @@ Getting the Source Code and the Dependencies
      o Boost (http://www.boost.org/): A C++ library providing many powerful
        utility classes and libraries. Boost must be compiled and installed
        for use with VR Juggler.
+
+     o GMTL (http://ggt.sf.net/): A generic math library that makes use of
+       C++ templates and STL paradigms.
 
      o Doozer++ (http://www.sf.net/projects/doozer/): A foundation for the
        development of complex build systems using Autoconf and GNU make. This
@@ -321,7 +328,9 @@ Getting the Source Code and the Dependencies
    The minimum required version of Boost, as of this writing, is 1.31.0. The
    Boost source can be downloaded from http://www.sf.net/projects/boost/. To
    compile and install Boost, refer to its installation documentation
-   (http://www.boost.org/more/getting_started.html#Build_Install).
+   (http://www.boost.org/more/getting_started.html#Build_Install). Note that
+   you need the command bjam (referred to as "boost-jam" on the Boost
+   download page) to build Boost.
 
     CppDOM
 
@@ -329,7 +338,8 @@ Getting the Source Code and the Dependencies
    distributions for some platforms can be downloaded from
    http://www.sf.net/projects/xml-cppdom/. If a binary version is not
    available for your operating system you must compile and install CppDOM
-   yourself.
+   yourself. Note that you need SCons (http://scons.sourceforge.net/) to
+   build and install CppDOM.
 
     Netscape Portable Runtime (NSPR)
 
