Noted change in the way ClusterPlugins are loaded.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14437 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-02-2004 aronb       ClusterPlugins are now dynamically loaded in a manner 
+                        more like device drivers.
 Feb-05-2004 patrickh    gadget::DigitalProxy::getData() now returns a
                         gadget::Digital::State.
                         NEW VERSION: 0.14.2
