Noted Alan's fix for tracked surface viewports and bumped the version to 1.1.149.  This is probably going to be the version number for 2.0 Alpha 4.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14445 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-03-2004 pallindo    Tracked surfaces now track any positional device
+                        correctly.
+                        NEW VERSION: 1.1.149
 Dec-07-2003 allenb      Added vrj::App::latePreFrame()
                         NEW VERSION: 1.1.148
 Oct-06-2003 allenb      Fixed bug where resizing of glx windows was not
