--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-12-2004 patrickh    Fixed conditional handling of vrj.OsgApp so that we do
+                        not require that users have OSG installed just to be
+                        able to use PyJuggler.
+                        NEW VERSION: 0.8.4
 Dec-08-2003 patrickh    Updated to VR Juggler 1.1.148.
                         NEW VERSION: 0.8.3
 Nov-23-2003 patrickh    Updated the Autoconf-based build system to use the
