Noted the newly restored feature of being able to look up configuration files using a search path and bumped the version to 0.16.0.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14506 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-19-2004 patrickh    Using a search path to find configuration files is
+                        working again for the first time since September 2001.
+                        NEW VERSION: 0.16.0
 Dec-31-2003 patrickh    Removed unneeded functions jccl::stringToVar(),
                         jccl::hasSeparator(), jccl::getRemainder(), and
                         jccl::getFirstNameComponent().
