--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,10 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-19-2004 patrickh    Restored the ability to specify a search path for
+                        configuration files using the environment variable
+                        $VJ_CFG_PATH (or $JCCL_CFG_PATH).  A default search
+                        path is now set if neither environment variable is
+                        defined.
 Mar-03-2004 pallindo    Tracked surfaces now track any positional device
                         correctly.
                         NEW VERSION: 1.1.149
