Noted the bug fixes that Aron and I made last night.  I have bumped the version to 0.12.4 (which never existed on the HEAD branch) as a reference point for future use.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@14580 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-01-2004 patrickh    Fixed MotionStar crashing bugs on Windows and array
+            aronb       initialization problems in gadget::EventWindow on all
+                        platforms.
+                        NEW VERSION: 0.12.4
 Jun-25-2003 patrickh    Allow the use of X11 on Mac OS X instead of the Carbon
                         UI classes.
                         NEW VERSION: 0.12.3
