--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2004-03-05 patrich     Changed the default omniORB version tested for by
+                       configure to omniORB4.
 2003-12-08 patrickh    Initial support for using Fnorb or PyORBit 2 as
                        alternatives to omniORBpy.  This work is not yet done.
 2003-11-07 patrickh    The editor for the global preferences of the Java GUI
