Updated to the JCCL 0.17.0 API.  There are some incidental, unintentional whitespace changes introduced with this revision due to my Visual SlickEdit settings.  The meat of the changes should be quite obvious, though.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14621 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-05-2004 patrickh    Updated to JCCL 0.17.0.
 Apr-01-2004 patrickh    Fixed MotionStar crashing bugs on Windows and array
             aronb       initialization problems in gadget::EventWindow on all
                         platforms.
