--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-05-2004 patrickh    Updated to JCCL 0.17.0.
 Mar-19-2004 patrickh    Restored the ability to specify a search path for
                         configuration files using the environment variable
                         $VJ_CFG_PATH (or $JCCL_CFG_PATH).  A default search
