When the Input and Cluster Managers are configured, they now append a default search path for their respective plug-in types.  This default path is determined at compile time to match the build type beyond just debug versus optimized/release.  On IRIX, the ABI (N32 vs. 64) is factored in, too.  Having a default search path allows users to provide config elements for these two managers with *no* search path set and still find the right plug-ins at run time.  This makes the config elements for these managers even more portable.  Essentially, the configurable search path is now used to allow users to extend beyond the default to load their own plug-ins without having to modify the Gadgeteer installation tree.
This change takes advantage of new additions in VPR 0.35.2.

Bumped Gadgeteer version to 0.14.4.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14671 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-11-2004 patrickh    The Input and Cluster Managers now append a default
+                        search path for driver and plug-in DSOs respectively.
+                        Updated to VPR 0.35.2.
+                        NEW VERSION: 0.14.4
 Apr-05-2004 patrickh    Updated to JCCL 0.17.0.
 Apr-01-2004 patrickh    Fixed MotionStar crashing bugs on Windows and array
             aronb       initialization problems in gadget::EventWindow on all
