Updated to depend on an installed version of GMTL.
Approved by:	allenb, aronb, browner10


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14683 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-11-2004 patrickh    Gadgeteer now depends on an installed version of GMTL.
 Apr-11-2004 patrickh    The Input and Cluster Managers now append a default
                         search path for driver and plug-in DSOs respectively.
                         Updated to VPR 0.35.2.
