Note that Sonix depends on an installed version of GMTL, not a version acquired via cvs-gather.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14684 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/ChangeLog
+++ b/juggler/modules/sonix/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-11-2004 patrickh    Sonix now depends on an installed version of GMTL.
 Dec-01-2003 patrickh    Removed the deletePlugin() function from the required
                         list of entry points a Sonix plug-in must implement.
                         Now, snx::ISoundImplementation defines a pure virtual
