--- a/modules/vapor/ChangeLog
+++ b/modules/vapor/ChangeLog
@@ -1,5 +1,9 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-04-21 patrickh With SPROC threads, thread-specific data is now stored in
+           aronb    PRDA->usr2_data to avoid conflicts with OpenSG and
+                    OpenThreads.
+                    NEW VERSION: 0.35.3
 2004-02-02 allenb   Added test() method to condition variables.
                     NEW VERSION: 0.34.1
 2004-01-28 patrickh Updated to require an installed build of CppDOM.  This
