--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-26-2004 pallindo    Refactored glove support.
+                        NEW VERSION: 0.15.0
 Apr-11-2004 patrickh    Gadgeteer now depends on an installed version of GMTL.
 Apr-11-2004 patrickh    The Input and Cluster Managers now append a default
                         search path for driver and plug-in DSOs respectively.
