Prepare for the next release of PyJuggler: version 0.9.0.  This will coincide with the release of VR Juggler 2.0 Alpha 4.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14870 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-01-2003 patrickh    NEW VERSION: 0.9.0
 Mar-12-2004 patrickh    Fixed conditional handling of vrj.OsgApp so that we do
                         not require that users have OSG installed just to be
                         able to use PyJuggler.
