Updated the Boost.Build stuff to work with Boost 1.31.0.  Unfortunately, the Jamfile has gotten a lot more complicated as a result of the different way that debug vs. release binaries are handled in a VR Juggler installation.  Since I don't know how to use Boost.Build very well, I do not know a way to simplify this file to handle debug vs. release linking more gracefully.  Furthermore, the way that the PyJuggler extension are linked causes them to look for boost_python.dll at load time on Windows, but Boost.Python is not installed under that name when it is compiled normally.  All of this is going to delay the release of PyJuggler 0.9.0. I should have done this update a lot sooner...
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14878 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/INSTALL.txt
+++ b/PyJuggler/INSTALL.txt
@@ -45,11 +45,11 @@ for compiling PyJuggler on your local operating system.
         this template-heavy code, and there will be link errors if you try
         to link against a VR Juggler installation compiled with VC++ 7.0.
 
-        Set the environment variable %NSPR_ROOT% to the base directory of
-        your NSPR installation.  This directory must contain a subdirectory
-        named 'include/nspr' that contains the NSPR headers and a
-        subdirectory named 'lib' that contains the natively compiled NSPR
-        libraries.
+        Set the environment variable %VJ_DEPS_DIR% to the base directory of
+        the VR Juggler dependencies.  This directory must contain a
+        subdirectory named 'include' that contains the NSPR and CppDOM
+        headers, and it must contain a subdirectory named 'lib' that contains
+        the natively compiled NSPR and CppDOM libraries.
 
 Using Boost.Build
 =================
@@ -78,12 +78,7 @@ Once you have bjam, follow these simple steps:
    3) Set the following environment variables:
 
          VJ_BASE_DIR: VR Juggler installation directory
-         CPPDOM_ROOT: CppDOM installation directory
-
-      If you are compiling on Windows, Solaris, or Mac OS X, you must also
-      set the following environment variable:
-
-         NSPR_ROOT: NSPR installation directory
+         VJ_DEPS_DIR: VR Juggler dependency installation directory
 
       If you want to compile in the bindings for the class vrj::OsgApp,
       set the following environment variable:
